# zwl-recover

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: build-linux.yml  build-mac.yml  build-win.yml  build.yml
src/: App.css  App.tsx  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: scan.rs
zwl-recover/: index.html
zwl-recover/src-tauri/: Cargo.toml
zwl-recover/src-tauri/src/: lib.rs  validation.rs
