[package]
name = "zwl-recover"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.94"
zcash-warp = { path = "zcash-warp" }
tokio = { version = "1.40", features = ["rt-multi-thread"] }
hex = "0.4.3"
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
clap = { version = "4.5.23", features = ["derive"] }

[patch.crates-io]
orchard = { git = "https://github.com/hhanh00/orchard.git", rev = "820a22e" }
