[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.0", features = [] }
tauri-plugin-log = "2.0.0-rc"

anyhow = "1.0.94"
zcash-warp = { path  = "../../warp/zcash-warp" }
tokio = { version = "1.40", features = ["rt-multi-thread"] }
hex = "0.4.3"
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
clap = { version = "4.5.23", features = ["derive"] }

[patch.crates-io]
orchard = { git = "https://github.com/hhanh00/orchard.git", rev = "820a22e" }
